apps/yosoy/historia-clinica/k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: historia-clinicas
  labels:
    name: historia-clinicas
    app: historia-clinicas
